template/assets/css/theme.css
/* ... */
.mentor-bio .mentor-avatar .mentor-avatar-image .illus-12 {
    position: absolute;
    width: 39.0625%;
    top: 0;
    left: -10%;
}

.mentor-bio .mentor-avatar .name {
    margin-top: var(--spacing-2sm);
}

.mentor-bio .mentor-avatar .subttl {
    font-size: var(--font-size-sub);
    line-height: var(--line-height-sub);
    letter-spacing: var(--letter-spacing-sm);
    text-transform: uppercase;
    font-family: var(--font-heading);
    color: rgba(var(--color-body-black-rgb), 0.5);
    margin-top: var(--spacing-md);
}

.mentor-bio .mentor-avatar .position {
    font-size: var(--font-size-h5);
    line-height: var(--line-height-h5);
    text-transform: capitalize;
    font-family: var(--font-heading);
    font-weight: var(--font-weight-regular);
    margin-top: var(--spacing-3xs);
}

.mentor-bio .mentor-bio-desc {
    flex-grow: 1;
    padding: var(--spacing-md) 0;
    height: 85%;
    overflow-y: auto;
    -webkit-mask-box-image: -webkit-linear-gradient(
        -90deg,
        transparent 0%,
        white var(--spacing-md),
        white calc(100% - var(--spacing-md)),
        transparent 100%
    );
}

.mentor-bio .mentor-bio-desc .entry-content strong {
    font-family: var(--font-heading);
}

.modal-year-selector {
    margin-top: 7.9012345679vh;
}

.mentor-modal .swiper.modal-year-selector {
    max-width: 30.3rem;
    -webkit-mask-box-image: -webkit-linear-gradient(
        0deg,
        transparent 0%,
        white var(--spacing-3xl),
        white calc(100% - var(--spacing-3xl)),
        transparent 100%
    );
}

.mentor-modal .swiper.modal-year-selector .swiper-slide {
    --gap: var(--spacing-xs);
}

.modal-year-selector .year-selector-item {
    color: var(--color-cream);
    padding-bottom: var(--spacing-5xs);
    font-size: var(--font-size-h4);
    line-height: var(--line-height-h4);
    font-family: var(--font-heading);
    text-transform: uppercase;
    font-weight: var(--font-weight-regular);
}

.modal-year-selector .year-selector-item.active {
    border-bottom: 0.1rem solid rgba(var(--color-cream-rgb), 0.3);
}

/* Organizer */
[data-section="organizer"] [class*="block-content-"] {
    margin-bottom: var(--spacing-3xl);
}

[data-section="organizer"] .organizer-list {
    --item-height: 5.2rem;
    --border: 1px solid rgba(var(--color-black-rgb), 0.1);
    --item-max-width: 90rem;
    --avatar-width: 8.8888888889vw;
    border-bottom: var(--border);
    position: relative;
}

[data-section="organizer"] .selector {
    width: 100%;
    height: var(--item-height);
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    background-color: #e9e6d2;
    transition: var(--duration-x2) cubic-bezier(0.33, 1, 0.68, 1);
}

[data-section="organizer"] .selector .selector-wrapper {
    max-width: var(--item-max-width);
    width: 100%;
    position: relative;
}

[data-section="organizer"] .organizer-item {
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: var(--border);
    min-height: var(--item-height);
    position: relative;
    padding-top: var(--spacing-2xs);
    padding-bottom: var(--spacing-2xs);
    z-index: 5;
}

[data-section="organizer"] .organizer-item .item-wrapper {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    width: 100%;
    max-width: var(--item-max-width);
}

[data-section="organizer"] .organizer-item .organizer-name > * {
    text-align: left;
    text-transform: uppercase;
}

[data-section="organizer"] .organizer-item .organizer-position > * {
    text-align: center;
}

[data-section="organizer"] .selector .organizer-avatar {
    z-index: 20;
    width: var(--avatar-width);
    aspect-ratio: 1;
    border-radius: 50%;
    overflow: hidden;
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
    opacity: 0;
    transition: var(--duration) var(--timing-function);
    user-drag: none;
    -webkit-user-drag: none;
    -moz-user-select: none;
}

[data-section="organizer"] .loadmore-button {
    display: block;
    margin: var(--spacing-2xl) auto 0;
    --button-color: rgba(var(--color-black-rgb), 0.5);
}

